--- a/src/main/resources/templates/aboutPage.html
+++ b/src/main/resources/templates/aboutPage.html
@@ -7,12 +7,13 @@
 <title>AboutPage</title>
 </head>
 <body>
-	<div class="title"><h1>Silph Spa</h1></div>
 	<div class="topnavbar">
-		<br>
+		<br/>
 		<a th:href="@{/}">Home</a>
+		<br/>
 	</div>
-	
+	<div class="title"><h1>Silph Spa</h1></div>
+
 	<br/>
 	<br/>
 	<br/>
@@ -21,10 +22,10 @@
 		<p>Questa web application e' stata creata da </p>
 		<ul>
 			<li>
-				<a th:text="Valerio Valente" th:href="https://github.com/valeriova96">link_valerio</a>
+				<a th:text="'Valerio Valente'" th:href="'https://github.com/valeriova96'">link_valerio</a>
 			</li>
 			<li>
-				<a th:text="Gabriele De Stradis" th:href="https://it.linkedin.com/in/gabriele-de-stradis-172173174">link_gabriele</a>
+				<a th:text="'Gabriele De Stradis'" th:href="'https://it.linkedin.com/in/gabriele-de-stradis-172173174'">link_gabriele</a>
 			</li>
 		</ul>
 	</div>
