--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -4,10 +4,20 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/css/style.css" />
-<title>AlbumsPage</title>
+<title>Albums Page</title>
 </head>
 <body>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
 	<div class="title"><h1>Albums</h1></div>
+	
+	<br/>
+	<br/>
 	<br/>
 	
 	<ul>
