--- a/src/main/resources/templates/fineRichiesta.html
+++ b/src/main/resources/templates/fineRichiesta.html
@@ -7,14 +7,14 @@
 <title>Richiesta Completata</title>
 </head>
 <body>
-	<div class="title"><h1>Silph Spa</h1></div>
 	<div class="topnavbar">
 		<br/>
 		<a th:href="@{/}">Home</a>
-		<span>	</span>
+		<span>&emsp;</span>
 		<a th:href="@{/about}">About</a>
 		<br/>
 	</div>
+	<div class="title"><h1>Silph Spa</h1></div>
 	
 	<br/>
 	<br/>
