--- a/src/main/resources/templates/fotografo.html
+++ b/src/main/resources/templates/fotografo.html
@@ -8,19 +8,18 @@
 </head>
 <body>
 	<div class="topnavbar">
-		<h1 class="title"><b>Silph Spa</b></h1>
-		<br>
+		<br/>
 		<a th:href="@{/}">Home</a>
-		<span>	</span>
+		<span>&emsp;</span>
 		<a th:href="@{/about}">About</a>
+		<br/>
 	</div>
+	<div class="title"><h1>Fotografo</h1></div>
 	
 	<br/>
 	<br/>
 	<br/>
 	
-	
-	<div><h3 class="title">Fotografo</h3></div>
 	<table th:object="${fotografo}">
 		<tr>
 			<td>Nome: </td>
