--- a/src/main/resources/templates/fotografoForm.html
+++ b/src/main/resources/templates/fotografoForm.html
@@ -7,7 +7,19 @@
 <title>Inserimento Fotografo</title>
 </head>
 <body>
-	<div class="title"><h4>Inserimento fotografo</h4></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/homeFunzionario}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Inserimento fotografo</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
 	<div><i>Inserisci i dati</i></div>
 	<br/>
 	
