--- a/src/main/resources/templates/funzionarioHome.html
+++ b/src/main/resources/templates/funzionarioHome.html
@@ -7,26 +7,41 @@
 <title>Benvenuto Funzionario</title>
 </head>
 <body>
-<div class="title"><h1>Benvenuto</h1></div>
-<div><h4><i>Seleziona un'attività</i></h4></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/homeFunzionario}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<span>&emsp;</span>
+		<a th:href="@{/}">Logout</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Benvenuto</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
+	<div><i>Seleziona un'attività</i></div>
+	<br/>
 
-<div class="ok_message" th:if="${messaggioConfemra}" th:text="${messaggioConferma}">messaggio_di_conferma</div>
+	<div class="ok_message" th:if="${messaggioConferma}" th:text="${messaggioConferma}">messaggio_di_conferma</div>
 
-<div>
-<span><a th:href="@{/addFotografo}">Aggiungi fotografo</a></span>
-</div>
+	<div>
+	<span><a th:href="@{/addFotografo}">Aggiungi fotografo</a></span>
+	</div>
+	
+	<br/>
 
-<br/>
+	<div>
+	<span><a th:href="@{/addFotografia}">Aggiungi fotografia</a></span>
+	</div>
+	
+	<br/>
 
-<div>
-<span><a th:href="@{/addFotografia}">Aggiungi fotografia</a></span>
-</div>
-
-<br/>
-
-<div>
-<span><a th:href="@{/addAlbum}">Aggiungi album</a></span>
-</div>
-
+	<div>
+	<span><a th:href="@{/addAlbum}">Aggiungi album</a></span>
+	</div>
+	
 </body>
 </html>
