--- a/src/main/resources/templates/notFoundPage.html
+++ b/src/main/resources/templates/notFoundPage.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<div class="topnavbar">
-		<h1 class="title"><b>Silph Spa</b></h1>
-		<br>
+		<br/>
 		<a th:href="@{/}">Home</a>
-		<span>	</span>
+		<span>&emsp;</span>
 		<a th:href="@{/about}">About</a>
-		<a th:href="@{/login}">LoginFunzionario</a>
+		<br/>
 	</div>
+	<div class="title"><h1>Not Found...</h1></div>
 	
 	<br/>
 	<br/>
