--- a/src/main/resources/templates/richiesta.html
+++ b/src/main/resources/templates/richiesta.html
@@ -7,9 +7,20 @@
 <title>Conferma Richiesta</title>
 </head>
 <body>
-	<div class="title"><h1>Dati Richiesta</h1></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Richiesta</h1></div>
+	
+	<br/>
+	<br/>
 	<br/>
 	
+	<div><i>Dati della richiesta</i></div>
 	<div>
 		<table>
 			<tr>
