--- a/src/main/resources/templates/richiestaForm.html
+++ b/src/main/resources/templates/richiestaForm.html
@@ -7,7 +7,17 @@
 <title>Inoltro Richiesta</title>
 </head>
 <body>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
 	<div class="title"><h1>Richiesta</h1></div>
+	
+	<br/>
+	<br/>
 	<br/>
 	
 	<div>
