--- a/src/main/resources/templates/scegliFotografo.html
+++ b/src/main/resources/templates/scegliFotografo.html
@@ -7,7 +7,19 @@
 <title>Scelta Fotografo</title>
 </head>
 <body>
-	<div class="title"><h4>Inserimento Fotografia</h4></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/homeFunzionario}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Inserimento Fotografia</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
 	<div><i>Scegli un fotografo della SilphSpa oppure <a th:href="@{/addFotografo}" th:text="'crea nuovo fotografo'">
 			</a></i></div>
 	<br/>
