--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -7,7 +7,19 @@
 <title>Carrello</title>
 </head>
 <body>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
 	<div class="title"><h1>Carrello</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
 	<div align="center">
 		<form th:action="@{/gallery}">
 			<input type="button" value="Prosegui navigazione" onClick="history.go(-1);">
