--- a/src/main/resources/templates/albumForm.html
+++ b/src/main/resources/templates/albumForm.html
@@ -7,7 +7,19 @@
 <title>Inserimento Album</title>
 </head>
 <body>
-	<div class="title"><h4>Inserimento album</h4></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Inserimento album</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
 	<div><i>Inserisci i dati</i></div>
 	<br/>
 	
