--- a/src/main/resources/templates/fotografie.html
+++ b/src/main/resources/templates/fotografie.html
@@ -8,19 +8,18 @@
 </head>
 <body>
 	<div class="topnavbar">
-		<h1 class="title"><b>Silph Spa</b></h1>
-		<br>
+		<br/>
 		<a th:href="@{/}">Home</a>
-		<span>	</span>
+		<span>&emsp;</span>
 		<a th:href="@{/about}">About</a>
+		<br/>
 	</div>
+	<div class="title"><h1>Fotografie</h1></div>
 	
 	<br/>
 	<br/>
 	<br/>
 	
-	
-	<div><h3 class="title">Fotografie</h3></div>
 	<div th:each="fotoPath : ${fotografie_paths}">
 		<img class="gallery_image" th:src="@{${fotoPath}}">
 
