--- a/src/main/resources/templates/funzionarioLogin.html
+++ b/src/main/resources/templates/funzionarioLogin.html
@@ -3,10 +3,24 @@
 	xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset="UTF-8">
-<title>Login page</title>
+<link rel="stylesheet" href="/css/style.css" />
+<title>Login Page</title>
 </head>
 <body>
-	<h4>Effettua il login</h4>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Login Funzionario</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
+	<div><i>Inserisci le credenziali</i></div>
 	<form th:action="@{/loginControl}" method="POST"
 		th:object="${funzionario}">
 		<p>
