--- a/src/main/resources/templates/scegliFotografia.html
+++ b/src/main/resources/templates/scegliFotografia.html
@@ -7,7 +7,19 @@
 <title>Inserimento Nuova Fotografia</title>
 </head>
 <body>
-	<div class="title"><h4>Scelta fotografia</h4></div>
+	<div class="topnavbar">
+		<br/>
+		<a th:href="@{/homeFunzionario}">Home</a>
+		<span>&emsp;</span>
+		<a th:href="@{/about}">About</a>
+		<br/>
+	</div>
+	<div class="title"><h1>Scelta Fotografia</h1></div>
+	
+	<br/>
+	<br/>
+	<br/>
+	
 	<div><i>Seleziona la foto per salvarla nel db</i></div>
 	<br/>
 	
